# python-project-lvl2

./: .flake8  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
gendiff/: __init__.py
gendiff/cli/: __init__.py  print_diff.py
gendiff/core/: __init__.py  core.py
gendiff/scripts/: run.py
gendiff/src/: __init__.py  add_diff_tags.py  add_indents.py  check_format.py  generate_diff.py  generate_out_string.py  get_extension.py  make_added_key_diffs.py  make_common_key_diffs.py  make_formatted_string.py  make_removed_key_diffs.py  make_tags.py  make_tags_and_common_data.py  parse_file.py  parse_input_str.py  tag_diffs.py
gendiff/src/out_format/: __init__.py  make_flat_out_string.py  make_nested_out_string.py  make_plain_out_string.py
gendiff/tests/: test_generate_diff.py
gendiff/tests/fixtures/: expected_before_after_diff.txt
tests/: constants.py  test_generate_diff.py  test_generate_diff_format_is_flat.py  test_generate_diff_format_is_nested.py  test_generate_diff_format_is_plain.py  test_generate_diff_json.py  test_generate_diff_yml.py  test_make_tags.py  test_make_tags_and_common_data.py  test_make_tags_and_common_data_input_json.py  test_make_tags_and_common_data_input_yml.py  test_tag_diffs_json.py  test_wrong_extension.py
tests/fixtures/: after_nested.yml  after_recursion.yml  before_recursion.yml  expected_before_after_tagged_dict.json
tests/fixtures/expected/: expected_common_data_flat.json  expected_common_data_nested.json  expected_flat_diff.txt  expected_flat_to_flat_diff.txt  expected_flat_to_plain_diff.txt  expected_nested_to_nested_diff.txt  expected_nested_to_plain_diff.txt  expected_tagged_dict_flat.json  expected_tags_flat.json  (+2 more)
(+1 files in other folders)
