[tool.poetry]
name = "sergeichukd_gendiff"
version = "0.1.5"
description = ""
authors = ["Sergeichuk Dmitrii <sergeychukdmitry@gmail.com>"]
packages = [
	{include = "gendiff"},
    ]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.run:main"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
